--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
             </div>
             <div class="right">
                 <nav>
-                    <a href="home.html">Main</a>
+                    <a href="home.html" class="active">Main</a>
                     <a href="movies.html">Films</a>
                     <a href="series.html">Series</a>
                     <a href="anime.html">Anime</a>
@@ -31,9 +31,9 @@
                     <i class="fa-solid fa-bell"></i>
                 </a>
                 <div class="auth">
-                    <img src="" alt=".0.">
+                    <img src="images/johnssdfg.jpg" alt=".0.">
                     <div class="user-info">
-                        <p class="username">cat</p>
+                        <p class="username">J0hn sssdfg</p>
                         <p class="tag">@sssdfg</p>
                     </div>
                     <i class="fa-solid fa-chevron-down"></i>
@@ -44,8 +44,8 @@
             <div class="left">
                 <div class="trailers">
                     <h3> New trailers</h3>
-                    <img src="" alt="trailer-card1">
-                    <img src="" alt="trailer-card2">
+                    <img src="images/sledy_na_snegu.jpg" alt="trailer-card1">
+                    <img src="images/ziv.jpg" alt="trailer-card2">
                 </div>
                 <div class="continue">
                     <h3>Continue watching</h3>
