--- a/home.html
+++ b/home.html
@@ -44,8 +44,18 @@
             <div class="left">
                 <div class="trailers">
                     <h3> New trailers</h3>
-                    <img src="images/sledy_na_snegu.jpg" alt="trailer-card1">
-                    <img src="images/ziv.jpg" alt="trailer-card2">
+                    <div  class="trailer-card1">
+                        <div class="blur">
+                            <h3>следы на снегу</h3>
+                            <p>67 mango mango mango phonk sigma alpha</p>
+                        </div>
+                    </div>
+                    <div  class="trailer-card2">
+                        <div class="blur">
+                            <h3>здорово и вечно</h3>
+                            <p>67 mango mango mango phonk sigma alpha</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="continue">
                     <h3>Continue watching</h3>
