--- a/home.html
+++ b/home.html
@@ -60,12 +60,12 @@
                 <div class="continue">
                     <h3>Continue watching</h3>
                     <div class="continue-card1">
-                        <img src="" alt="idk">
+                        <img src="images/sledy_na_snegu.jpg" alt="idk">
                         <div class="info">
-                            <p class="name">Bloody trail</p>
+                            <p class="name">Следы на снегу</p>
                             <p class="serie">Serie 1</p>
                         </div>
-                        <a href="play.html">
+                        <a href="play.html" class="i">
                             <i class="fa-solid fa-play"></i>
                         </a>
                     </div>
